# rust-stakevault

./: .env  Cargo.toml  Dockerfile  configuration.yml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml  local.yml
migrations/: 20211013075414_create_subscriptions_table.sql  20211013075501_create_accounts_table.sql  20211127091525_create_subscription_tokens_table.sql
scripts/: init-db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: accounts.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: accounts.rs  health_check.rs  utils.rs
tests/api/: accounts.rs  health_check.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs  utils.rs
