[package]
name = "rust-stakevault"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="rust_stakevault"

[dependencies]
actix-web = "4.0.0-beta.8"
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9.0"
log = "0.4.14"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"
tracing-actix-web = "0.4.0-beta.12"
serde-aux = "1.0.1"


[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.serde_with]
version = "1.11.0"


[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
reqwest = "0.11"
tokio = "1"
